{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 63,
  "lineage": "758412a1-d585-ae05-ad05-2abcdceab5a3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-29T19:11:02.753-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-studies-467500/global/firewalls/flask-app-firewall",
            "log_config": [],
            "name": "flask-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/global/networks/my-custom-mode-network",
            "params": [],
            "priority": 1000,
            "project": "terraform-studies-467500",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/global/firewalls/flask-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-29T19:11:02.743-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-studies-467500/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/global/networks/my-custom-mode-network",
            "params": [],
            "priority": 1000,
            "project": "terraform-studies-467500",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/global/firewalls/allow-ssh",
            "source_ranges": [
              "186.210.84.105/32",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250728",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/zones/us-central1-a/disks/flask-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-07-29T19:11:30.317-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/terraform-studies-467500/zones/us-central1-a/instances/flask-vm",
            "instance_id": "8533808748410749373",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "0FeV1kzm_I8=",
            "metadata_startup_script": "#!/bin/bash\n\nid flaskuser \u0026\u003e/dev/null || useradd -m flaskuser\n\napt-get update\napt-get install -y build-essential python3-pip rsync\n\nsudo -u flaskuser pip3 install --user flask\n\ncat \u003c\u003cEOF \u003e /home/flaskuser/app.py\nimport sys\nsys.path.append('/home/flaskuser/.local/lib/python3.9/site-packages')  # ajuste conforme versão do Python\n\nfrom flask import Flask\napp = Flask(__name__)\n\n@app.route('/')\ndef hello_cloud():\n    r [...]
            "name": "flask-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.184.133.160",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/global/networks/my-custom-mode-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/regions/us-central1/subnetworks/manage-terraform-subnet",
                "subnetwork_project": "terraform-studies-467500"
              }
            ],
            "project": "terraform-studies-467500",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/zones/us-central1-a/instances/flask-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-studies-467500/global/networks/my-custom-mode-network",
            "mtu": 1460,
            "name": "my-custom-mode-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1557985731683860933",
            "numeric_id": "1557985731683860933",
            "project": "terraform-studies-467500",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/global/networks/my-custom-mode-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-29T19:11:02.734-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/terraform-studies-467500/regions/us-central1/subnetworks/manage-terraform-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "manage-terraform-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-studies-467500",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-studies-467500/regions/us-central1/subnetworks/manage-terraform-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 9131128572027912665
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}